Opening up ports

--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -58,5 +58,24 @@
     volumes:
       - "{{ dionaea_storage_path }}/dionaea.sysconfig:{{ dionaea_env_file }}"
       - "{{ dionaea_storage_path }}/persist:/etc/dionaea"
+    ports:
+      - "21:21"
+      - "23:23"
+      - "69:69"
+      - "80:80"
+      - "123:123"
+      - "135:135"
+      - "443:443"
+      - "445:445"
+      - "1433:1433"
+      - "1723:1723"
+      - "1883:1883"
+      - "1900:1900"
+      - "3306:3306"
+      - "5000:5000"
+      - "5060:5060"
+      - "5061:5061"
+      - "11211:11211"
+      - "27017:27017"
   tags:
     - docker
